--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
-    "react-native-maps": "0.30.1",
+    "react-native-map-clustering": "^3.4.2",
+    "react-native-maps": "^0.31.1",
     "react-native-safe-area-context": "^4.2.5",
     "react-native-svg": "^12.3.0",
     "react-native-vector-icons": "^9.1.0",
